HCSP-8 Set grid row positions of month headers to correctly align with month's date positions

--- a/client/stylesheets/App.scss
+++ b/client/stylesheets/App.scss
@@ -38,6 +38,7 @@ h2,
 h3 {
   font-weight: normal;
   font-family: var(--serif-font);
+  margin: 0;
 }
 
 body {
