--- a/client/stylesheets/Home.scss
+++ b/client/stylesheets/Home.scss
@@ -1,7 +1,8 @@
 @import './App.scss';
 
-h2 {
+h1 {
   text-align: right;
+  padding: 0.5em;
 }
 
 #home-container {
@@ -36,7 +37,6 @@ h2 {
   border-radius: 10px;
   background-color: rgb(255, 255, 255, 0.3);
   font-family: var(--serif-font);
-  font-size: 1rem;
 }
 
 .day {
